# RapiDHT

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: dev_array.h  kernel.h  rapidht.h  utilities.h
source/: CMakeLists.txt  kernel.cu  rapidht.cpp  utilities.cpp
tests/: CMakeLists.txt  test_fdht1d.cpp  test_fdht2d.cpp  test_fdht3d.cpp  test_fdhtnd.cpp  test_smoke.cpp
